refactor!: remove Mermaid export, optimize BitmapNetExecutor, delete parser example
## Mermaid removal

- Delete `MermaidExporter` (Java + TypeScript), `MermaidTaglet`, `PetriNetDoclet`
- Delete `mermaid.min.js`, `header.html`, and associated test files
- Remove `mermaidDiagram`/`mermaidId` fields from debug protocol records
- Migrate debug UI from Mermaid.js to Viz.js (Graphviz WASM)
- `PetriNetTaglet` handles all diagram generation via `dot -Tsvg`
- `DiagramRenderer` accepts pre-rendered SVG, inlines CSS/JS from classpath
- Update spec EXP-001 to DOT (Graphviz) as sole export format

## BitmapNetExecutor optimization

- Replace `boolean[]` flags with packed `long[]` bitmaps
- Replace `AtomicLongArray dirtySet` with plain `long[] dirtyBitmap`
- Add shadow `markingBitmap` to avoid volatile reads in hot path
- Cache `hasAnyDeadlines`, `allImmediate`, `allSamePriority`, `eventStoreEnabled`
- Add `fireReadyImmediate()` fast path for simple nets
- Inline sync output processing when future already completed
- Reuse `readyBuffer`/`dirtyScanBuffer` across cycles
- Default `EventStore` changed from `inMemory()` to `noop()`

## Other

- Cache place sets in `Transition` constructor
- Simplify `TransitionContext.input()` to direct value lookup
- Delete `examples/java-parser/` module
- Remove orphaned Examples section from README