@@ -2,18 +2,16 @@
  * Javadoc taglets for compile-time Petri net visualization.
  *
  * <h2>Overview</h2>
- * <p>This package provides custom Javadoc taglets that generate Mermaid diagrams
+ * <p>This package provides custom Javadoc taglets that generate DOT/SVG diagrams
  * from static {@link org.libpetri.core.PetriNet} definitions. The diagrams
- * are embedded directly in the generated Javadoc HTML and rendered via Mermaid.js.
+ * are rendered to SVG at build time via Graphviz and embedded directly in the
+ * generated Javadoc HTML with interactive pan/zoom/fullscreen support.
  *
  * <h2>Taglets</h2>
  * <dl>
  *   <dt>{@link org.libpetri.doclet.PetriNetTaglet @petrinet}</dt>
- *   <dd>Auto-generates Mermaid diagram from a static PetriNet field.
+ *   <dd>Auto-generates a DOT→SVG diagram from a static PetriNet field.
  *       Usage: {@code @petrinet FIELD_NAME} or {@code @petrinet ClassName.FIELD_NAME}</dd>
- *
- *   <dt>{@link org.libpetri.doclet.MermaidTaglet @mermaid}</dt>
- *   <dd>Embeds raw Mermaid code in Javadoc. Usage: {@code @mermaid flowchart TB; A --> B}</dd>
  * </dl>
  *
  * <h2>Design Pattern: Static Structure + Runtime Actions</h2>
@@ -50,28 +48,25 @@
  * }
  * }</pre>
  *
- * <h2>Gradle Configuration</h2>
- * <pre>
- * javadoc {
- *     options {
- *         taglets 'org.libpetri.doclet.MermaidTaglet'
- *         taglets 'org.libpetri.doclet.PetriNetTaglet'
- *         tagletPath = files(sourceSets.main.output.classesDirs, configurations.runtimeClasspath)
- *         addBooleanOption('-allow-script-in-comments', true)
- *         addStringOption('header', '&lt;script src="https://cdn.jsdelivr.net/npm/mermaid@10/dist/mermaid.min.js"&gt;&lt;/script&gt;' +
- *             '&lt;script&gt;mermaid.initialize({startOnLoad:true});&lt;/script&gt;')
- *     }
- *     dependsOn classes
- * }
- * </pre>
- *
- * <h2>Viewing Diagrams</h2>
- * <pre>
- * ./gradlew viewPetriNets   # Generates Javadoc and opens in browser
- * </pre>
+ * <h2>Maven Configuration</h2>
+ * <pre>{@code
+ * <plugin>
+ *     <groupId>org.apache.maven.plugins</groupId>
+ *     <artifactId>maven-javadoc-plugin</artifactId>
+ *     <configuration>
+ *         <additionalOptions>--enable-preview --allow-script-in-comments</additionalOptions>
+ *         <taglets>
+ *             <taglet>
+ *                 <tagletClass>org.libpetri.doclet.PetriNetTaglet</tagletClass>
+ *             </taglet>
+ *         </taglets>
+ *         <tagletpath>${project.build.outputDirectory}</tagletpath>
+ *     </configuration>
+ * </plugin>
+ * }</pre>
  *
  * @see org.libpetri.core.NetStructure
  * @see org.libpetri.core.PetriNet#bindActions
- * @see org.libpetri.export.MermaidExporter
+ * @see org.libpetri.export.DotExporter
  */
 package org.libpetri.doclet;
